# Projects

./: .gitignore  README.md
Android/Slide Rule/: build.gradle
C++/cpp_holdem/: Makefile  card.cpp  card.hpp  hand.cpp  hand.hpp  hand_percentages.cpp  hand_percentages.hpp  player.cpp  player.hpp  win_percentages.cpp  win_percentages.exe.stackdump  win_percentages.hpp
C++/cribbage/: Makefile  cribbage.cpp  pegger.cpp  pegger.hpp  player.cpp  temp.hpp
C++/graph/: Makefile  doxygen.config  graph.hpp  graph_private.hpp  graph_test  graph_test.cpp  ld.exe.stackdump  letter_change  letter_change.cpp  main.cpp  main.exe.stackdump  slide_puzzle.hpp  slide_puzzle_private.hpp  solver  solver.cpp  solver.exe.stackdump  solver.stackdump
C++/maxheap/: Makefile  doxygen.config  maxheap.hpp  test-maxheap.cpp  testing-program.hpp
C++/misc_fcns/: knapsack.cpp
C++/rsa/: Makefile  main.cpp  rsa_decrypter.cpp  rsa_decrypter.hpp  rsa_encrypter.cpp  rsa_encrypter.hpp  rsa_utils.hpp  server.cpp  server.hpp  user.cpp  user.hpp
C++/testing_program/: README.md
C_C++/: vpn.c
C_C++/asciimation/: asciimation.cpp  asciimation.hpp  main.cpp  ncurses_helper.cpp  ncurses_helper.hpp  scroll_left.cpp  scroll_left.hpp  slide_up.cpp  slide_up.hpp
C_C++/cpp_holdem/: card.cpp  card.hpp  hand.cpp  hand.hpp  hand_percentages.cpp  hand_percentages.hpp  player.cpp  player.hpp  win_percentages.cpp  win_percentages.hpp
C_C++/cribbage/: card.cpp  card.hpp  cribbage.cpp  cribbage.hpp  fcn.cpp  pegger.cpp  pegger.hpp  player.cpp  player.hpp  temp.cpp  temp.hpp
C_C++/graph/: dictionary.txt  graph.hpp  graph_private.hpp  graph_test.cpp  letter_change.cpp  slide_puzzle.hpp  slide_puzzle_private.hpp  solver.cpp
C_C++/maxheap/: Makefile  README.md  maxheap-private.hpp  maxheap.hpp  test-maxheap.cpp  testing-program.cpp  testing-program.hpp
C_C++/networks/: CMakeLists.txt  dnsquery.c  dnsquery.cpp  dnsquery.hpp  main.cpp  maindns.cpp  my_dnsquery.c  my_nslookup.c  my_traceroute.cpp  my_traceroute.hpp  netutils.cpp  netutils.hpp  port_scan.cpp  port_scan.hpp  simple_nslookup.c
C_C++/networks/rsa/: CMakeLists.txt  keygen.cpp  keygen.hpp  main.cpp  rsa_utils.cpp  rsa_utils.hpp  server.cpp  server.hpp  user.cpp  user.hpp
C_C++/networks/rsa2/: CMakeLists.txt  keygen.cpp  keygen.hpp  main.cpp  rsa_utils.cpp  rsa_utils.hpp  server.cpp  server.hpp  user.cpp  user.hpp
C_C++/parsers/: CMakeLists.txt  expr.cpp  main.cpp  movable_fn.hpp  parser-impl.hpp  parser.hpp  parser_impl.hpp  parser_util.hpp  parsers.cpp  parsers.hpp  regex.cpp  widget.hpp
C_C++/regex/: CMakeLists.txt  main.cpp  regex.cpp  regex.hpp
C_C++/rsa/: rsa_decrypter.hpp
C_C++/testing_program/: Makefile  README.md  example.cpp  testing-program.cpp  testing-program.hpp
C_C++/unit_test/: README.md  example.cpp  unit_test.hpp
C_C++/unknown/: asciimation.cpp  asciimation.hpp  main.cpp  ncurses_helper.cpp
Java/Holdem Odds/: Card.java  Hand.java  HoldEm.java  OneCardHandPercentages.java  Player.java  Suit.java  Symbol.java  ThreadTest.java
Java/Poker3/: .project
Java/local_server/: file1.html  file2.html
Java/misc_fcns/: FermatFactorization.java  NewtonsMethod.java
Java/web_server/: WebServer.java  file1.html  file2.html
Python/: Hangman.py  WordStreak.py  combo.py  practice.py
Python/WordStreak/: Test.py  WordStreak.py
Python/communicating_science/: Communicating Science.docx  archive_scraping.py  nytimes_scraping.py
Python/hangman/: Hangman.py
Python/knn_algorithm/: knn.py
Python/neural_nets/: Neural Network Notes.docx  Neural Network Notes.docx.gdoc  images.csv  (+7 more)
cpp/: vpn.c
cpp/networks/rsa/: CMakeLists.txt  Makefile  keygen.cpp  rsa_utils.hpp  server.cpp  user.cpp  user.hpp
java/: ImageGraph.java
java/webserver/src/: .bazelrc  BUILD.bazel
java/webserver/src/java/com/prez/: HttpServer.java
python/: combo.py
(+395 files in other folders)
